This is a f****** joke. The XAML crashes when setting a Slider minimum >0. The XAML sets the value of the slider to 1 when the value is > 1.

--- a/Fluctuface.Client/Fluctuface.Client/Views/ItemsPage.xaml
+++ b/Fluctuface.Client/Fluctuface.Client/Views/ItemsPage.xaml
@@ -40,9 +40,9 @@
                                 FontSize="13" />
                         <Slider
                             x:Name="slider"
-                            Value="{Binding SliderValue}"
                             Minimum="{Binding Min}"
-                            Maximum="{Binding Max}" />
+                            Maximum="{Binding Max}"
+                            Value="{Binding SliderValue}" />
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
                         </StackLayout.GestureRecognizers>
